--- a/ex4.html
+++ b/ex4.html
@@ -11,20 +11,34 @@
 
    <input type="text" id="inputText">
    <!-- add a button here for adding new item -->
+   <button onclick="addItem()">Enter</button>
 
-   <ul>
-      <li>Notebook<!--<button>Delete</button></li>-->
-      <li>Jello</li>
-      <li>Spinach</li>
-      <li>Rice</li>
-      <li>Birthday Cake</li>
-      <li>Candles</li>
+   <ul id="list">
+      <li>Notebook <button onclick="removeItem(this.parentNode)">Delete</button> </li>
+      <li>Jello <button onclick="removeItem(this.parentNode)">Delete</button>  </li>
+      <li>Spinach <button onclick="removeItem(this.parentNode)">Delete</button> </li>
+      <li>Rice <button onclick="removeItem(this.parentNode)" >Delete</button> </li>
+      <li>Birthday Cake <button onclick="removeItem(this.parentNode)"> Delete</button> </li>
+      <li>Candles <button onclick="removeItem(this.parentNode)">Delete</button> </li>
    </ul>
 
    <script>
-
       // add code here
-
+      function addItem() {
+         const newItem = document.getElementById("inputText").value;
+         const li = document.createElement("li");
+         li.innerText = newItem;
+         const btn = document.createElement("button");
+         btn.innerText ="delete"
+         btn.addEventListener("click", function() {
+            removeItem(this.parentNode);
+         });
+         li.appendChild(btn);
+         document.getElementsByTagName("ul")[0].appendChild(li);
+      }
+      function removeItem(obj) {
+      obj.remove();
+      }
    </script>
 
 </body>
